kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test1
  labels:
    app: multicast-verify
spec:
  containers:
    - name: msender
      image: registry.access.redhat.com/ubi8
      command: ["/bin/sh", "-c"]
      args:
        ["dnf -y install socat && sleep inf"]
