kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kasv
  labels:
    app: kasv
spec:
  selector:
    app: kasv
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  type: ClusterIP
